--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.1",
     "styled-components": "^5.3.0",
     "uuidv4": "^6.2.8",
     "web-vitals": "^1.1.2"
