--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-saga-test-plan": "^4.0.1",
+    "reselect": "^4.0.0",
     "styled-components": "^5.3.0",
     "uuidv4": "^6.2.8",
     "web-vitals": "^1.1.2"
